template/trinity-large-preview:free-cot/row_63_update_2_template_20260310_034045.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Aurora MySQL Cluster with CloudWatch Logs Integration'

Parameters:
  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.1.0/24
    Description: CIDR block for public subnet 1
  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.2.0/24
    Description: CIDR block for public subnet 2
  DatabaseName:
    Type: String
    Default: aurora_db
    Description: Name of the database to create
  MasterUsername:
    Type: String
    Default: admin
    Description: Database master username
  MasterUserPassword:
    Type: String
    Default: admin123
    NoEcho: true
    Description: Database master password

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Aurora-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Aurora-IGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Aurora-Public-RouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Aurora-Public-Subnet-1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Aurora-Public-Subnet-2

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: aurora-db-subnet-group
      DBSubnetGroupDescription: Subnets for Aurora cluster
      SubnetIds:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: Aurora-DB-Subnet-Group

  DBClusterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Aurora cluster
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Aurora-Cluster-SG

  DBClusterIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - rds.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: CloudWatchLogsAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                Resource: '*'

  DBClusterLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /aws/rds/cluster/aurora-cluster
      RetentionInDays: 30

  DBCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora-mysql
      EngineMode: provisioned
      EngineVersion: 5.7.mysql_aurora.2.11.0
      DatabaseName: !Ref DatabaseName
      MasterUsername: !Ref MasterUsername
      MasterUserPassword: !Ref MasterUserPassword
      DBSubnetGroupName: !Ref DBSubnetGroup
      VpcSecurityGroupIds:
        - !GetAtt DBClusterSecurityGroup.GroupId
      Port: 3306
      BackupRetentionPeriod: 7
      PreferredBackupWindow: '03:00-04:00'
      PreferredMaintenanceWindow: 'mon:04:00-mon:05:00'
      EnableCloudwatchLogsExports:
        - error
      EnableHttpEndpoint: true
      EnableIAMDatabaseAuthentication: true
      DBClusterParameterGroupName: default.aurora-mysql5.7
      Tags:
        - Key: Name
          Value: Aurora-Cluster

  DBClusterInstance1:
    Type: AWS::RDS::DBInstance
    Properties:
      DBClusterIdentifier: !Ref DBCluster
      DBInstanceClass: db.t3.large
      Engine: aurora-mysql
      EngineVersion: 5.7.mysql_aurora.2.11.0
      PubliclyAccessible: true
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !GetAtt DBClusterSecurityGroup.GroupId
      DBParameterGroupName: default.aurora-mysql5.7
      Tags:
        - Key: Name
          Value: Aurora-Instance-1

  DBClusterInstance2:
    Type: AWS::RDS::DBInstance
    Properties:
      DBClusterIdentifier: !Ref DBCluster
      DBInstanceClass: db.t3.large
      Engine: aurora-mysql
      EngineVersion: 5.7.mysql_aurora.2.11.0
      PubliclyAccessible: true
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !GetAtt DBClusterSecurityGroup.GroupId
      DBParameterGroupName: default.aurora-mysql5.7
      Tags:
        - Key: Name
          Value: Aurora-Instance-2

Outputs:
  ClusterEndpoint:
    Description: Aurora cluster endpoint
    Value: !Join ['', ['mysql://', !GetAtt DBCluster.Endpoint]]
  ReaderEndpoint:
    Description: Aurora reader endpoint
    Value: !Join ['', ['mysql://', !GetAtt DBCluster.ReadEndpoint]]
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
  DBSubnetGroup:
    Description: DB Subnet Group Name
    Value: !Ref DBSubnetGroup
